RESOLVED FIXED137050
Call WKPageUIClient::isPlayingAudioDidChange() whenever audio starts/stops playing on a page
https://bugs.webkit.org/show_bug.cgi?id=137050
Summary Call WKPageUIClient::isPlayingAudioDidChange() whenever audio starts/stops pl...
Ada Chan
Reported 2014-09-23 16:26:58 PDT
Call WKPageUIClient::isPlayingAudioDidChange() whenever audio starts/stops playing on a page.
Attachments
Patch (8.27 KB, patch)
2014-10-06 14:47 PDT, Ada Chan
andersca: review+
Alexey Proskuryakov
Comment 1 2014-09-23 19:21:07 PDT
Will this include plug-in audio?
Ada Chan
Comment 2 2014-09-23 19:31:58 PDT
Yes it will include plug-in audio. I'll most likely separate that into a different bug later though.
Ada Chan
Comment 3 2014-10-06 14:40:17 PDT
(In reply to comment #2) > Yes it will include plug-in audio. I'll most likely separate that into a different bug later though. I've filed: https://bugs.webkit.org/show_bug.cgi?id=137219 for handling plug-in audio. https://bugs.webkit.org/show_bug.cgi?id=137464 for handling web audio.
Ada Chan
Comment 4 2014-10-06 14:47:28 PDT
Ada Chan
Comment 5 2014-10-06 21:43:02 PDT
Note You need to log in before you can comment on or make changes to this bug.